<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="30dp"
    tools:context=".CcBancos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:paddingRight="30dp">

        <Button
            android:id="@+id/btnCabecera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:clickable="false"
            android:text="@string/btnConoceCocha"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btnCabecera2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:clickable="false"
            android:text="@string/btnCCUBancos"
            android:textColor="#3e88d2"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/btnCCBUC"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/btnCMTApedaderoDoble"
                    android:src="@drawable/ccbancounion1" />

                <TextView
                    android:id="@+id/textViewAD"
                    android:layout_width="306dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:paddingTop="30dp"
                    android:text="@string/btnCCUBUnionCentral"
                    android:textStyle="bold"
                    android:textColor="#80b6ec"/>

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <ImageButton
                    android:id="@+id/btnCCBFR"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/btnCMTApedadero"
                    android:src="@drawable/ccbancofie" />

                <TextView
                    android:id="@+id/textViewA"
                    android:layout_width="306dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:paddingTop="30dp"
                    android:text="@string/btnCCUBFieRoja"
                    android:textStyle="bold"
                    android:textColor="#f90a32"/>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <ImageButton
                    android:id="@+id/btnCCBBR"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/btnCMTLineaRoja"
                    android:src="@drawable/ccbancobisa" />

                <TextView
                    android:id="@+id/textViewLR"
                    android:layout_width="306dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:paddingTop="30dp"
                    android:text="@string/btnCCUBBisa"
                    android:textStyle="bold"
                    android:textColor="#f90a32"/>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <ImageButton
                    android:id="@+id/btnCCBUV"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/btnCMTSeñalizacion"
                    android:src="@drawable/ccbancouniondos" />

                <TextView
                    android:id="@+id/textViewS"
                    android:layout_width="306dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:paddingTop="30dp"
                    android:text="@string/btnCCUBUnionVerde"
                    android:textStyle="bold"
                    android:textColor="#009717"/>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <ImageButton
                    android:id="@+id/btnCCBBV"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/btnCMTSeñalizacion"
                    android:src="@drawable/ccbancobnb" />

                <TextView
                    android:id="@+id/textViewSS"
                    android:layout_width="306dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:paddingTop="30dp"
                    android:text="@string/btnCCUBBnbVerde"
                    android:textStyle="bold"
                    android:textColor="#009717"/>
            </TableRow>
        </TableLayout>
    </ScrollView>



</LinearLayout>