<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity"
    android:id="@+id/relativeLayout2">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="287dp">


    </LinearLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="#37b5e9"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="189dp"
                android:layout_height="50dp"
                android:contentDescription="@string/logoSuperior"
                android:src="@drawable/logo" />

        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="152dp"
        android:layout_alignTop="@+id/toolbar"
        android:layout_marginStart="8dp"
        android:layout_marginTop="89dp"
        android:contentDescription="@string/logoCentral"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/hash" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="474dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="3dp"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/imageButton25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/btnRutas"
                android:onClick="rutas"
                app:srcCompat="@mipmap/ruta" />

            <ImageButton
                android:id="@+id/imageButton26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/btnEducacionVial"
                android:onClick="educacionVial"
                app:srcCompat="@mipmap/educacionvial" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="35dp">

            <ImageButton
                android:id="@+id/imageButton27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/btnConoceMiTren"
                android:onClick="conoceMiTren"
                app:srcCompat="@mipmap/conocemitren" />

            <ImageButton
                android:id="@+id/imageButton28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/btnDestino"
                android:onClick="horarios"
                app:srcCompat="@mipmap/horario" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="35dp">

            <ImageButton
                android:id="@+id/imageButton30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/btnConoceCocha"
                android:onClick="conoceCochabamba"
                app:srcCompat="@mipmap/conocecochabamba" />

            <ImageButton
                android:id="@+id/imageButton31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/btnDestino"
                android:onClick="destino"
                app:srcCompat="@mipmap/destino" />
        </TableRow>
    </TableLayout>

</RelativeLayout>