<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="30dp"
    tools:context=".educacionVialFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingTop="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <Button
            android:id="@+id/btnCabecera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:clickable="false"
            android:text="@string/btnEducacionVial"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/btnCP"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/btnVialCrucePeatonal"
                    android:src="@drawable/crucepeatonal" />

                <TextView
                    android:id="@+id/textViewAD"
                    android:layout_width="306dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:paddingTop="30dp"
                    android:text="@string/btnVialCrucePeatonal"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <ImageButton
                    android:id="@+id/btnPTP"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/btnVialParadaTransporte"
                    android:src="@drawable/paradatransporte" />

                <TextView
                    android:id="@+id/textViewA"
                    android:layout_width="306dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:paddingTop="30dp"
                    android:text="@string/btnVialParadaTransporte"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <ImageButton
                    android:id="@+id/btnS"
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/btnVialSemaforo"
                    android:src="@drawable/semaforo" />

                <TextView
                    android:id="@+id/textViewLR"
                    android:layout_width="306dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:paddingTop="30dp"
                    android:text="@string/btnVialSemaforo"
                    android:textStyle="bold" />
            </TableRow>

        </TableLayout>
    </ScrollView>

</LinearLayout>